# Texas-test

texas/: .gitignore  .gitmodules  Vagrantfile  Vagrantfile-HyperV  deploy.sh  docker-compose.yml  ec2-user-data.sh  nginx-setup.sh  push-ecr.sh  readme.md  release-notes.md  rocket-chat-setup.sh  traccar-setup.sh  traccar.xml  vagrant.env
texas/couch-setup/: Dockerfile  couchdb-fetch.js  couchdb-put.js  package.json
texas/couch-setup/db/: controlamqp  mission-data
texas/kubernetes/: ns.yaml  readme.md
texas/kubernetes/texas-chart/: Chart.yaml  requirements.yaml  values.yaml
texas/kubernetes/texas-chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  couchdb-setup-deployment.yaml  ingress.yaml  (+2 more)
texas/nginx/: nginx.conf  traccar-proxy-user-data.sh
texas/nginx/sections/: listen_traccar.section  ssl_proxy.section
texas/texas.hmi/: .env  .env.default  .gitignore  .gitmodules  Dockerfile  README.md  angular.json  bitbucket-pipelines.yml  config.xml  ionic.config.json  ngsw-config.json  package.json  release-notes.md  run-hmi.sh  tslint.json
texas/texas.hmi/resources/: icon.png.md5  splash.png.md5
texas/texas.hmi/src/: index.html  manifest.webmanifest  material-to-ionic.css  polyfills.ts
texas/texas.hmi/texas-hmi-chart/: Chart.yaml  values.yaml
texas/texas.hmi/texas.cordova/: README.md  package.json  plugin.xml  release-notes.md
texas/texas.hmi/texas.cordova/src/android/jni/: CMakeLists.txt  Taf-jni.cpp  build.sh
texas/texas.hmi/texas.restart/: README.md  package.json  plugin.xml
texas/texas.logging/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  release-notes.md  tsconfig.json
texas/texas.logging/src/: index.ts
texas/texas.logging/texas-logging-chart/: Chart.yaml  values.yaml
texas/texas.query/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  release-notes.md
texas/texas.query/src/: index.ts
texas/texas.query/texas-query-chart/: Chart.yaml  values.yaml
texas/texas.replay/: Dockerfile  README.md  dev.env  package-lock.json  package.json  production.env  release-notes.md  tsconfig.json  tslint.json
texas/texas.replay.hmi/: Dockerfile  README.md  angular.json  package-lock.json  package.json  release-notes.md
texas/texas.replay.hmi/src/: index.html
texas/texas.replay.hmi/texas-replay-hmi-chart/: Chart.yaml  values.yaml
texas/texas.replay/assets/: alertsamqp
texas/texas.replay/src/: app.module.ts  main.ts
texas/texas.replay/texas-replay-chart/: Chart.yaml  values.yaml
texas/texas.replicator/: Dockerfile  README.md  package-lock.json  package.json  release-notes.md  tsconfig.json  tslint.json
texas/texas.replicator/__tests__/: index-spec.ts  replicator-spec.ts
texas/texas.replicator/src/: index.ts  replicator.ts
texas/texas.replicator/texas-replicator-chart/: Chart.yaml  values.yaml
texas/texas.service/: .gitignore  .gitmodules  Dockerfile  README.md  Texas.conf  Texas.mwc  Texas_vs2017.bat  build_docker.sh  release-notes.md  test.conf
texas/texas.service/scripts/: TexasDocker.mwc  build_texas.sh  docker_build_env.sh  run_texas.sh  texas.features  texas_build_env.sh
texas/texas.service/texas/: DataModel.h  Texas.mpc  TexasService.cpp  TexasService.h
texas/texas.service/texas-service-chart/: Chart.yaml  values.yaml
texas/texas.service/texas.docker/: Dockerfile  lasagne.properties  lasagne.services  run.sh
texas/texas.tasking/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  release-notes.md  tsconfig.json
texas/texas.tasking/src/: Tasker.ts  TrackReceiver.ts  index.ts  typings.ts
texas/texas.tasking/texas-tasking-chart/: Chart.yaml  values.yaml
texas/traefik-video-proxy/: docker-compose.yml  traefik.yml
(+327 files in other folders)
